--- a/site/stylesheets/main.css
+++ b/site/stylesheets/main.css
@@ -1,43 +1,56 @@
-#member-list {
-  list-style: none;
-  margin: 30px auto;
+#search-card {
+  margin: 300px auto;
+  min-height: auto;
+  transition: margin .2s;
   width: 800px;
 }
 
-#member-list .congress-member {
-  margin: 10px;
+#search-card.collapsed {
+  margin-top: 20px;
 }
 
-#member-list .congress-member__name {
-  font-weight: bold;
-  font-size: 30px;
-}
-
-#member-list .congress-member__title {
-  font-size: 20px;
-  color: #888;
-}
-
-#search-box {
-  display: block;
-  font-size: 20px;
-  margin: 300px auto;
-  padding: 10px;
+#search-card__search-box {
+  font-size: 40px;
+  margin: 0 auto;
+  outline: none;
+  padding: 15px;
   text-align: center;
-  transition: margin .2s;
-  width: 400px;
+  width: 100%;
 }
 
-#search-box.collapsed {
-  margin: 10px auto;
+.search-card__search-results {
+  max-height: 500px;
+  overflow: scroll;
 }
 
-.more-box {
-  background: #fff;
-  border: solid black;
-  height: 500px;
-  left: 0;
+.search-card__search-result {
+  height: auto;
+  margin: 0;
+  padding: 10px 30px 0 30px;
+}
+
+.search-card__search-result:hover {
+  background: #efefef;
+}
+
+.search-card__search-result a {
+  color: #555;
+  text-decoration: none;
+  width: 100%;
+}
+
+.search-card__search-result .mdl-list__item-primary-content .mdl-list__item-icon {
+  margin-right: 10px;
+}
+
+#member-card {
+  position: relative;
+  margin: 20px auto;
+  width: 800px;
+}
+
+#member-card__party-chip {
   position: absolute;
-  top: 0;
-  width: 500px;
+  right: 20px;
+  top: 10px;
 }
