--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -5,13 +5,15 @@
          class="mdl-textfield__input"
          type="text"
          placeholder="Find a member of congress"
+         ng-change="homeCtrl.search()"
+         ng-keyup="homeCtrl.handleSearchKeyup($event)"
          ng-model="homeCtrl.currentSearch">
 
   <ul class="mdl-list search-card__search-results"
       ng-show="homeCtrl.hasCurrentMembers()">
     <li class="mdl-list__item mdl-list__item--three-line search-card__search-result"
         ng-repeat="member in homeCtrl.currentMembers">
-      <a href="/members/{{member.person.firstname}}+{{member.person.lastname}}/{{member.person.id}}">
+      <a href="{{homeCtrl.getUrlForMember(member)}}">
         <span class="mdl-list__item-primary-content">
           <i class="material-icons mdl-list__item-icon search-card__search-result__icon"
              ng-class="homeCtrl.getPartyColorForMember(member)">
