--- a/site/templates/member.html
+++ b/site/templates/member.html
@@ -6,8 +6,7 @@
       {{memberCtrl.member.person.lastname}}
     </h1>
 
-    <span id="member-card__party-chip"
-          class="mdl-chip mdl-chip--contact">
+    <span class="mdl-chip mdl-chip--contact member-card__party-chip">
       <span class="mdl-chip__contact mdl-color--red mdl-color-text--white"
             ng-class="memberCtrl.getPartyChipClass()">
         {{memberCtrl.getPartyChipParty()}}
@@ -19,9 +18,38 @@
   </div>
 
   <div class="mdl-card__supporting-text">
-
-    <img ng-src="https://www.govtrack.us/data/photos/{{memberCtrl.member.person.id}}-100px.jpeg"
+    <img class="member-card_contact-picture"
+         ng-src="https://www.govtrack.us/data/photos/{{memberCtrl.member.person.id}}-100px.jpeg"
          width="100" />
+
+    <ul class="mdl-list member-card__contact-list">
+      <li class="mdl-list__item member-card__contact-list-item">
+        <span class="mdl-list__item-primary-content">
+          <i class="material-icons mdl-list__item-icon">mail</i>
+          <a href="{{memberCtrl.member.extra.contact_form}}">
+            Contact by email
+          </a>
+        </span>
+      </li>
+
+      <li class="mdl-list__item member-card__contact-list-item">
+        <span class="mdl-list__item-primary-content">
+          <i class="material-icons mdl-list__item-icon">public</i>
+          <a href="{{memberCtrl.member.website}}">
+            Website
+          </a>
+        </span>
+      </li>
+
+      <li class="mdl-list__item member-card__contact-list-item">
+        <span class="mdl-list__item-primary-content">
+          <i class="material-icons mdl-list__item-icon">play_circle_filled</i>
+          <a href="https://www.youtube.com/user/{{memberCtrl.member.person.youtubeid}}">
+            YouTube Account
+          </a>
+        </span>
+      </li>
+    </ul>
 
     <p>
       <span id="hangout-placeholder"></span>
