--- a/site/stylesheets/main.css
+++ b/site/stylesheets/main.css
@@ -45,8 +45,12 @@
 
 #member-card {
   position: relative;
-  margin: 20px auto;
+  margin: 150px auto;
   width: 800px;
+}
+
+.member-card__title {
+  padding-bottom: 7px;
 }
 
 .member-card__party-chip {
@@ -59,10 +63,42 @@
   vertical-align: top;
 }
 
+.member-card__phone {
+  display: inline-block;
+  margin-left: 3px;
+  vertical-align: top;
+}
+
+.member-card__phone-icon {
+  font-size: 120px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.member-card__hangout-button {
+  display: inline-block;
+  margin-top: 18px;
+}
+
+.member-card__hangout-button p {
+  font-family: Roboto,Helvetica,Arial,sans-serif;
+  font-size: 18px;
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+.member-card__or {
+  display: inline-block;
+  font-family: Roboto,Helvetica,Arial,sans-serif;
+  font-size: 50px;
+  font-style: italic;
+  margin: 40px 36px 0 32px;
+  text-transform: uppercase;
+}
+
 .member-card__contact-list {
   display: inline-block;
   margin: 0;
-  margin-left: 15px;
   padding: 0;
   vertical-align: top;
 }
