Get the state header working

--- a/site/stylesheets/main.css
+++ b/site/stylesheets/main.css
@@ -1,119 +1,3 @@
-#search-card {
-  margin: 300px auto;
-  min-height: auto;
-  transition: margin .2s;
-  width: 800px;
-}
-
-#search-card.collapsed {
-  margin-top: 20px;
-}
-
-#search-card__search-box {
-  font-size: 40px;
-  margin: 0 auto;
-  outline: none;
-  padding: 15px;
-  text-align: center;
-  width: 100%;
-}
-
-.search-card__search-results {
-  max-height: 500px;
-  overflow: scroll;
-}
-
-.search-card__search-result {
-  height: auto;
-  margin: 0;
-  padding: 10px 30px 0 30px;
-}
-
-.search-card__search-result:hover {
-  background: #efefef;
-}
-
-.search-card__search-result a {
-  color: #555;
-  text-decoration: none;
-  width: 100%;
-}
-
-.search-card__search-result .mdl-list__item-primary-content .mdl-list__item-icon {
-  margin-right: 10px;
-}
-
-#member-card {
-  position: relative;
-  margin: 150px auto;
-  width: 800px;
-}
-
-.member-card__title {
-  padding-bottom: 7px;
-}
-
-.member-card__party-chip {
-  position: absolute;
-  right: 20px;
-  top: 10px;
-}
-
-.member-card_contact-picture {
-  vertical-align: top;
-}
-
-.member-card__phone {
-  display: inline-block;
-  margin-left: 3px;
-  vertical-align: top;
-}
-
-.member-card__phone-icon {
-  font-size: 120px;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.member-card__hangout-button {
-  display: inline-block;
-  margin-top: 18px;
-}
-
-.member-card__hangout-button p {
-  font-family: Roboto,Helvetica,Arial,sans-serif;
-  font-size: 18px;
-  margin: 0;
-  margin-bottom: 5px;
-}
-
-.member-card__or {
-  display: inline-block;
-  font-family: Roboto,Helvetica,Arial,sans-serif;
-  font-size: 50px;
-  font-style: italic;
-  margin: 40px 36px 0 32px;
-  text-transform: uppercase;
-}
-
-.member-card__contact-list {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  vertical-align: top;
-}
-
-.member-card__contact-list-item {
-  display: block;
-  margin-bottom: 10px;
-  min-height: auto;
-  padding: 0;
-}
-
-.member-card__contact-list-item a {
-  color: #555;
-}
-
-.member-card__contact-list .mdl-list__item .mdl-list__item-primary-content .mdl-list__item-icon {
-  margin-right: 8px;
-}
+@import 'search-card.css';
+@import 'member-card.css';
+@import 'state-face-font.css';
