--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -1,6 +1,7 @@
 <div id="search-card"
      class="mdl-card mdl-shadow--2dp"
      ng-class="homeCtrl.getSearchCardClass()">
+
   <input id="search-card__search-box"
          class="mdl-textfield__input"
          type="text"
@@ -9,10 +10,17 @@
          ng-keyup="homeCtrl.handleSearchKeyup($event)"
          ng-model="homeCtrl.currentSearch">
 
+  <div class="search-card__search-results-header mdl-color--cyan-800"
+       ng-show="homeCtrl.isCurrentSearchForState()">
+    <i class="search-card__state-icon"
+       ng-class="homeCtrl.getStateIconClass()"></i>
+    All representatives for {{homeCtrl.getStateForStateHeader()}}
+  </div>
+
   <ul class="mdl-list search-card__search-results"
-      ng-show="homeCtrl.hasCurrentMembers()">
+      ng-show="homeCtrl.hasSearchResults()">
     <li class="mdl-list__item mdl-list__item--three-line search-card__search-result"
-        ng-repeat="member in homeCtrl.currentMembers">
+        ng-repeat="member in homeCtrl.getSearchResults()">
       <a href="{{homeCtrl.getUrlForMember(member)}}">
         <span class="mdl-list__item-primary-content">
           <i class="material-icons mdl-list__item-icon search-card__search-result__icon"
@@ -25,7 +33,7 @@
           </span>
 
           <span class="mdl-list__item-text-body">
-            {{member.party}} {{member.title_long}}
+            {{member.party}} {{member.title_long}} from {{member.customData.fullStateName}}
           </span>
         </span>
       </a>
