--- a/site/templates/member.html
+++ b/site/templates/member.html
@@ -1,88 +1,1 @@
-<div id="member-card"
-     class="mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title member-card__title">
-    <h1 class="mdl-card__title-text">
-      {{memberCtrl.getMemberName()}}
-    </h1>
-
-    <div class="member-card__chips">
-      <span class="mdl-chip mdl-chip--contact member-card__state-chip"
-            ng-if="memberCtrl.isStateChipVisible()">
-        <span class="mdl-chip__contact mdl-color--cyan-800 mdl-color-text--white">
-          <i class="member-card__state-chip-icon"
-            ng-class="memberCtrl.getStateChipIconClass()"></i>
-        </span>
-        <span class="mdl-chip__text">
-          {{memberCtrl.member.customData.fullStateName}}
-        </span>
-      </span>
-
-      <span class="mdl-chip mdl-chip--contact member-card__party-chip">
-        <span class="mdl-chip__contact mdl-color-text--white"
-              ng-class="memberCtrl.getPartyChipClass()">
-          {{memberCtrl.getPartyChipParty()}}
-        </span>
-        <span class="mdl-chip__text">
-          {{memberCtrl.member.title_long}}
-        </span>
-      </span>
-    </div>
-  </div>
-
-  <div class="mdl-card__supporting-text">
-    <img class="member-card_contact-picture"
-         ng-src="https://www.govtrack.us/data/photos/{{memberCtrl.member.person.id}}-100px.jpeg"
-         width="100" />
-
-    <div class="member-card__phone">
-      <i class="material-icons member-card__phone-icon">phone</i>
-      <div class="member-card__hangout-button">
-        <p>Call now for free</p>
-        <hangout-button phone-number="memberCtrl.member.phone"></hangout-button>
-      </div>
-    </div>
-
-    <div class="member-card__or">
-      or
-    </div>
-
-    <ul class="mdl-list member-card__contact-list">
-      <li class="mdl-list__item member-card__contact-list-item">
-        <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">mail</i>
-          <a href="{{memberCtrl.member.extra.contact_form}}">
-            Contact by email
-          </a>
-        </span>
-      </li>
-
-      <li class="mdl-list__item member-card__contact-list-item">
-        <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">public</i>
-          <a href="{{memberCtrl.member.website}}">
-            Visit Website
-          </a>
-        </span>
-      </li>
-
-      <li class="mdl-list__item member-card__contact-list-item">
-        <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">play_circle_filled</i>
-          <a href="https://www.youtube.com/user/{{memberCtrl.member.person.youtubeid}}">
-            Visit YouTube Account
-          </a>
-        </span>
-      </li>
-    </ul>
-
-    <p>
-      <span id="hangout-placeholder"></span>
-    </p>
-  </div>
-
-  <div class="mdl-card__actions mdl-card--border">
-    <a href="/" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      Search again
-    </a>
-  </div>
-</div>
+<member-card member="memberCtrl.member"></member-card>
