--- a/site/templates/member.html
+++ b/site/templates/member.html
@@ -1,1 +1,3 @@
-<member-card member="memberCtrl.member"></member-card>
+<section class="single-member">
+  <member-card member="memberCtrl.member"></member-card>
+</section>
