--- a/site/stylesheets/common.css
+++ b/site/stylesheets/common.css
@@ -1,3 +1,14 @@
+.site-header a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.site-header__icon {
+  position: relative;
+  top: 1px;
+  vertical-align: bottom;
+}
+
 .single-member {
   margin: 150px auto;
   width: 800px;
@@ -13,25 +24,21 @@
   font-size: 40px;
   font-weight: 200;
   margin-bottom: 10px;
+  margin-top: 30px;
   min-height: auto;
   width: 800px;
 }
 
-.member-list__header-card-title {
-  padding: 9px 0 0px 18px
-}
-
 .member-list__header-card h2 {
   color: #eaeaea;
-  font-size: 34px;
+  font-size: 29px;
+  font-weight: 200;
 }
 
 .member-list__header-card .member-list__state-icon {
   display: inherit;
   font-size: 50px;
   margin-right: 7px;
-  position: relative;
-  top: -3px;
 }
 
 .member-list .member-card {
