--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -16,7 +16,7 @@
 
   <div class="search-card__search-results-header mdl-color--light-blue-500"
        ng-show="homeCtrl.isCurrentSearchForState()">
-    <a href="/states/{{homeCtrl.getStateForStateHeader().toLowerCase()}}">
+    <a href="{{homeCtrl.getStateUrl()}}">
       <i class="search-card__state-icon"
         ng-class="homeCtrl.getStateIconClass()"></i>
       View all {{homeCtrl.getMembersCount()}} Senators and Representatives for {{homeCtrl.getStateForStateHeader()}} »
@@ -27,8 +27,8 @@
        ng-show="homeCtrl.currentCongressionalDistrict">
     <i class="search-card__state-icon"
        ng-class="homeCtrl.getStateIconClass()"></i>
-    <a href="/states/{{homeCtrl.currentCongressionalDistrict.state.toLowerCase()}}/district/{{homeCtrl.currentCongressionalDistrict.number}}">
-      View all Senators and Representatives for {{homeCtrl.getCongressionalDistrictHeader()}} »
+    <a href="{{homeCtrl.getDistrictUrl()}}">
+      View Senators and Representatives for {{homeCtrl.getCongressionalDistrictHeader()}} »
     </a>
   </div>
 
@@ -36,7 +36,7 @@
       ng-show="homeCtrl.hasSearchResults()">
     <li class="mdl-list__item mdl-list__item--three-line search-card__search-result"
         ng-repeat="member in homeCtrl.getSearchResults()">
-      <a href="{{homeCtrl.getUrlForMember(member)}}">
+      <a href="{{homeCtrl.getMemberUrl(member)}}">
         <span class="mdl-list__item-primary-content">
           <i class="material-icons mdl-list__item-icon search-card__search-result__icon"
              ng-class="homeCtrl.getPartyColorForMember(member)">
