Add some responsiveness to the site
Tweak the layout and styles so that the site looks decent on various
devices include smaller screens and mobile devices.

--- a/site/stylesheets/main.css
+++ b/site/stylesheets/main.css
@@ -1,4 +1,5 @@
 @import 'common.css';
 @import 'search-card.css';
 @import 'member-card.css';
+@import 'member-card-chips.css';
 @import 'state-face-font.css';
