--- a/site/stylesheets/common.css
+++ b/site/stylesheets/common.css
@@ -26,7 +26,7 @@
   margin-bottom: 10px;
   margin-top: 30px;
   min-height: auto;
-  width: 800px;
+  width: 100%;
 }
 
 .member-list__header-card h2 {
@@ -43,4 +43,20 @@
 
 .member-list .member-card {
   margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 900px) {
+  .member-list,
+  .single-member {
+    margin: 0 auto;
+    margin-top: 5px;
+    min-width: 315px;
+    width: 98%;
+  }
+
+  .member-list__header-card {
+    display: block;
+    margin-top: 5px;
+    width: auto;
+  }
 }
