Update the example address since DC doesn't have a congress member

--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -30,9 +30,9 @@
       <ul class="mdl-card__supporting-text search-help__search-options">
         <li>
           An Address
-          <a href="/?q=1600+Pennsylvania+Ave+NW,+Washington,+DC"
+          <a href="/?q=601+W+Broadway,+Louisville+KY"
             ng-click="homeCtrl.handleSearchLink()">
-            e.g. 1600 Pennsylvania Ave NW, Washington, DC »
+            e.g. 601 W Broadway, Louisville KY »
           </a>
         </li>
 
